tests/baselines/reference/yieldExpression1.errors.txt
tests/cases/compiler/yieldExpression1.ts(1,9): error TS9001: 'generators' are not currently supported.


==== tests/cases/compiler/yieldExpression1.ts (1 errors) ====
    function* foo() {
            ~
!!! error TS9001: 'generators' are not currently supported.
        yield
    }